<resources>
    <string name="app_name">Virtual Physics Lab</string>
    <string-array name="materials">
        <item>Steel</item>
        <item>Copper</item>
        <item>Aluminium</item>
        <item>Gold</item>
        <item>Iron</item>
        <item>Magnesium Metal</item>
        <item>Tungsten</item>
        <item>Uranium</item>
        <item>Beryllium</item>
        <item>Nickel</item>
        <item>Sapphire</item>
        <item>Tin</item>
    </string-array>
    <string-array name="solutions">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
    </string-array>
    <string name="Q1">Q1. What are the dimensions of Young\'s Modulus ?</string>
    <string name="Q1a">[M]⁻¹[L]⁻¹[T]⁻²</string>
    <string name="Q1b">[M]⁻¹[L]⁻²[T]⁻²</string>
    <string name="Q1c">[M][L]⁻²[T]⁻²</string>
    <string name="Q1d">[M][L]⁻¹[T]⁻²</string>
    <string name="Q2">Q2. What is Young\'s Modulus ?</string>
    <string name="Q2a">Longitudinal Stress / Longitudinal Strain</string>
    <string name="Q2b">Strain / Stress</string>
    <string name="Q2c">Change in length / Original length</string>
    <string name="Q2d">Stress / Change in length</string>
    <string name="Q3">Q3. Which of the following relation is stated by Hooke\'s law ?</string>
    <string name="Q3a">Stress is directly proportional to strain</string>
    <string name="Q3b">Stress is inversely proportional to strain</string>
    <string name="Q3c">Stress is directly proportional to square of strain</string>
    <string name="Q3d">Stress is inversely proportional to square of strain</string>
    <string name="Q4">Q4. Which of the following can be the value of Poisson\'s ratio for an engineering structure ?</string>
    <string name="Q4a">2</string>
    <string name="Q4b">0.4</string>
    <string name="Q4c">29</string>
    <string name="Q4d">100</string>
    <string name="Q5">Q5. Which of the following is found out by calculating area under Stress - Strain graph ?</string>
    <string name="Q5a">Toughness</string>
    <string name="Q5b">Endurance</string>
    <string name="Q5c">Hardness</string>
    <string name="Q5d">Strength</string>
    <string name="Q6">Q6. While Young\'s Modulus \'E\' relates to change in length, bulk modulus \'K\' relates to change
        in volume, modulus of rigidity \'G\' relates to change in </string>
    <string name="Q6a">Weight</string>
    <string name="Q6b">Density</string>
    <string name="Q6c">Shape</string>
    <string name="Q6d">Temperature</string>
    <string name="Q7">Q7. What is the property of a body by virtue of which it tends to regains its original shape and
        size on removing applied force is called ?</string>
    <string name="Q7a">Deformation</string>
    <string name="Q7b">Strain</string>
    <string name="Q7c">Elasticity</string>
    <string name="Q7d">Plasticity</string>
    <string name="Q8">Q8. The Young\'s Modulus of a wire of radius R and length L is Y N/m². What will be the Young\'s
        Modulus of wire of radius 2R and length 4L of the same material ?</string>
    <string name="Q8a">Y</string>
    <string name="Q8b">2Y</string>
    <string name="Q8c">0</string>
    <string name="Q8d">4Y</string>
    <string name="Q9">Q9. The ratio of radius of two wires is 2:1. If the same force is applied to both of them, the
        extension produced is in the ratio 2:3. What will be the ratio of their lengths ?</string>
    <string name="Q9a">1:1</string>
    <string name="Q9b">2:3</string>
    <string name="Q9c">1:3</string>
    <string name="Q9d">1:6</string>
    <string name="Q10">Q10. A wire extends 1 cm by the application of certain force. Double the force is applied to another
        wire of same material and length, but half the radius of previous one. Then what will be the elongation
        produced by the wire ?</string>
    <string name="Q10a">0.8 m</string>
    <string name="Q10b">0.08 m</string>
    <string name="Q10c">0.8 cm</string>
    <string name="Q10d">8 mm</string>
    <string name="YM_Aim">Aim : To determine Young\'s modulus of elasticity of the material of a given wire.</string>
    <string name="tHome">1. When you will start this application, home screen will appear just like
    the one shown below. Select any option by pressing button of your choice.</string>
    <string name="tElasticity">2. Then a list of available experiments will show on the screen. Select the practical of
    your choice by pressing its button.</string>
    <string name="tTheory">3. Now, virtual lab screen will show up just like shown below. There are four tabs upside. You
        can select the tab of your choice. To perform experiment virtually press "Simulation" tab.</string>
    <string name="tSim1">4. Now, simulation tab will open. First of all, select the wire material of your choice. To do
    so just press the drop down menu as shown below</string>
    <string name="tSim2">5. Then enter the weight, wire length and wire radius as shown in the pictures below.</string>
    <string name="tSim3">6. After you have entered all details , you will be able to press "SHOW RESULT"
    button. Now press the "SHOW RESULT" button. The result will be shown just like the picture shown below.</string>
</resources>