<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YMTutorial" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tHome"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/home" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tElasticity"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/elasticity" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tTheory"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/theory" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tSim1"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/simulation1" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/simulation2" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tSim2"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/simulation3" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/simulation4" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/simulation5" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tSim3"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="950dp"
                android:src="@drawable/simulation6" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>